RL: Add Policy Eval

--- a/Reinforcement learning.ipynb
+++ b/Reinforcement learning.ipynb
@@ -371,6 +371,46 @@
   },
   {
    "cell_type": "markdown",
+   "id": "f41b3fff",
+   "metadata": {},
+   "source": [
+    "# Policy Evaluation & Control\n",
+    "\n",
+    "In reinforcement learning, two fundamental tasks are:\n",
+    "* Policy Evaluation: Determining how good a given policy $\\pi$ is by computing its state-value function $v_\\pi$.\n",
+    "* Policy Control: Improving a policy by iteratively producing strictly better policies until reaching an optimal policy.\n",
+    "\n",
+    "Dynamic Programming (DP) methods can be used to solve both tasks if we have access to the environment's dynamics $p(s', r \\mid s, a)$.\n",
+    "\n",
+    "## Iterative Policy Evaluation\n",
+    "To evaluate the state values under a policy $\\pi$, we use the Bellman equation for the value function, where\n",
+    "\n",
+    "$$v_\\pi(s) = \\sum_{a} \\pi(a \\mid s) \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma v_\\pi(s') \\right]$$\n",
+    "\n",
+    "Since computing $v_\\pi$ exactly is often impractical, we use an iterative approximation, where\n",
+    "\n",
+    "$$v_{k+1}(s) = \\sum_{a} \\pi(a \\mid s) \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma v_k(s') \\right]$$\n",
+    "\n",
+    "Each iteration updates the estimated value of every state once, using the latest available estimates. With enough iterations, the values are guaranteed to converge to the true value function $v_\\pi$.\n",
+    "\n",
+    "\n",
+    "### Algorithm: Iterative Policy Evaluation (Given a Policy $\\pi$)\n",
+    "\n",
+    "1. Initialize two arrays, $v_k$ and $v_{k+1}$, to store the old and updated state values for all states.\n",
+    "2. Randomly initialize the state values (or initialize all to zero).\n",
+    "3. For each state $s$, compute a new value using\n",
+    "   $$v_{k+1}(s) = \\sum_{a} \\pi(a \\mid s) \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma v_k(s') \\right]$$\n",
+    "4. Store all new values in $v_{k+1}$.\n",
+    "5. After updating all states, replace $v_k$ with $v_{k+1}$ (set $v_k = v_{k+1}$).\n",
+    "6. Repeat steps 3–5 until the values converge, meaning the change between $v_k$ and $v_{k+1}$ is smaller than a chosen threshold.\n",
+    "\n",
+    "A unique value function $v_\\pi$ is guaranteed to exist for any given policy $\\pi$ as long as the task is episodic or the discount factor satisfies $\\gamma < 1$. Under these conditions, the iterative updates are guaranteed to converge to the true values.\n",
+    "\n",
+    "## Control"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f6e2f0f",
    "metadata": {},
    "source": [
@@ -406,45 +446,12 @@
     "   \n",
     "The neural network takes in a state, action pair and approximates the return a list $Q(s,a)$ values that contains the return for each action performed, so the algorithm can pick the action that maximize $Q(s,a)$ in the list\n",
     "\n",
-    "## $\\epsilon$ greedy policy\n",
-    "Greedy (exploitation) step: with a high probability ($p=1-\\epsilon$), pick the action that maximizes $Q(s,a)$ based on the current $Q$ function\n",
-    "Exploration step: with a low probability ($p=\\epsilon$), pick a random action. This allows the algorithm to explore  action space even some actions do not maximize the return\n",
-    "\n",
-    "Start with a high $\\epsilon$ value and decrease it gradually as the approximation for $Q$ becomes better\n",
-    "\n",
     "\n",
     "## Mini batch\n",
     "When the training set is large, the algorithm only takes a subset of the training example to compute the cost and a different subset next time. Thus, the algorithm will not take the most optimal step each time, but it will speed up the training process significantly \n",
     "\n",
     "## Soft update\n",
     "When updating $Q = Q_{new}$, the new network may be worse than the old one. To prevent full overwritting, we update the weigths and bias through $w = p \\times w + (1-p) \\times w_{new}$ and $b = p \\times b + (1-p) \\times b_{new}$ instead of $w = w_{new}$  and $b = b_{new}$, where $b$ is a value between 0 and 1"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eb5bdf06",
-   "metadata": {},
-   "source": [
-    "\n",
-    "**Q-function (Action-Value Function)**: a function that estimate the expected return for taking action $a$ in state $s$, and following policy $\\pi$ afterward. The $Q$ function is specific to each state–action pair\n",
-    "$$ Q^\\pi(s, a) = \\mathbb{E}_\\pi[R_t \\mid s_t = s, a_t = a] $$\n",
-    "\n",
-    "* $Q$: the action value, which captures the expected total return (cumulative future rewards), starting from the timestep $t$ with the state $s$, taking a specific action $a$, and then following policy $\\pi$ for all future steps.\n",
-    "\n",
-    "* $R_t$: the return recieved from one trial\n",
-    "\n",
-    "In Multi-armed bandit problem, there's no concept of state and policy, so the action-value function simplfies to\n",
-    "$$ Q(a) = \\mathbb{E}[R \\mid A = a] $$\n",
-    "where the expected return only depends on the action taken at the current step since each action is independent from the others\n",
-    "\n",
-    "The goal of reinforcement learning is to learn a policy that maximizes the expected return over time.\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "**Value function ($V$)**: a function that estimate the expected return when starting from a state and following a policy $\\pi$\n",
-    "$$ V^\\pi(s) = \\mathbb{E}_\\pi[R_t \\mid s_t = s] $$\n",
-    "The value function evaluates how good a particular state is under a given policy"
    ]
   }
  ],
