RL: Policy Eval, Policy Improvement, Policy Iteration

--- a/Reinforcement learning.ipynb
+++ b/Reinforcement learning.ipynb
@@ -371,14 +371,14 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f41b3fff",
+   "id": "dc985d31",
    "metadata": {},
    "source": [
-    "# Policy Evaluation & Control\n",
+    "# Policy Evaluation & Improvement \n",
     "\n",
     "In reinforcement learning, two fundamental tasks are:\n",
     "* Policy Evaluation: Determining how good a given policy $\\pi$ is by computing its state-value function $v_\\pi$.\n",
-    "* Policy Control: Improving a policy by iteratively producing strictly better policies until reaching an optimal policy.\n",
+    "* Policy Improvement: Improving a policy by iteratively producing strictly better policies until reaching an good enough or optimal policy.\n",
     "\n",
     "Dynamic Programming (DP) methods can be used to solve both tasks if we have access to the environment's dynamics $p(s', r \\mid s, a)$.\n",
     "\n",
@@ -391,8 +391,7 @@
     "\n",
     "$$v_{k+1}(s) = \\sum_{a} \\pi(a \\mid s) \\sum_{s'} \\sum_{r} p(s', r \\mid s, a) \\left[ r + \\gamma v_k(s') \\right]$$\n",
     "\n",
-    "Each iteration updates the estimated value of every state once, using the latest available estimates. With enough iterations, the values are guaranteed to converge to the true value function $v_\\pi$.\n",
-    "\n",
+    "Each iteration updates the estimated value of every state once, using the latest available estimates. With enough iterations, the values are guaranteed to converge to the true value function $v_\\pi$. The key idea of policy evaluation is to use observed (or expected) rewards and the estimated state values one step ahead to iteratively update state values until they converge.\n",
     "\n",
     "### Algorithm: Iterative Policy Evaluation (Given a Policy $\\pi$)\n",
     "\n",
@@ -406,7 +405,49 @@
     "\n",
     "A unique value function $v_\\pi$ is guaranteed to exist for any given policy $\\pi$ as long as the task is episodic or the discount factor satisfies $\\gamma < 1$. Under these conditions, the iterative updates are guaranteed to converge to the true values.\n",
     "\n",
-    "## Control"
+    "## Policy Improvement\n",
+    "The primary goal of computing the value function of a policy is to help us find a better policy. Given the state-value function $v_\\pi$ of any arbitrary policy $\\pi$, we can construct a new policy $\\pi'$ by acting greedily with respect to $v_\\pi$. That is, in each state, $\\pi'$ selects the action that yields the highest expected return based on the current value estimates. By doing this, the new policy $\\pi'$ is guaranteed to be at least as good as the original policy $\\pi$. If the new policy’s value function $v_{\\pi'}$ is strictly better than $v_\\pi$, we have improved the policy. If $v_{\\pi'} = v_\\pi$, this means the current policy is already optimal, and no further improvement is possible.\n",
+    "\n",
+    "### Policy Improvement Theorem\n",
+    "Formally, given two policies $\\pi$ and $\\pi'$, the new policy $\\pi'$ is guaranteed to be at least as good as $\\pi$ if, for every state $s$:\n",
+    "\n",
+    "$$q_\\pi(s, \\pi'(s)) \\geq v_\\pi(s)$$\n",
+    "\n",
+    "This condition means that in every state $s$, the action chosen by $\\pi'$, which can be a same or different action chosen by $\\pi$, always yields an expected return greater than or equal to the value of following the original policy $\\pi$ from that state onward.\n",
+    "\n",
+    "As a result,\n",
+    "\n",
+    "$$v_{\\pi'}(s) \\geq v_\\pi(s) \\quad \\text{for all } s$$\n",
+    "\n",
+    "### Greedy Policy Improvement\n",
+    "Applying the policy improvement theorem, given an original policy $\\pi$ and its state-value function $v_\\pi(s)$, we can obtain a better or equally good policy $\\pi'$ by selecting actions greedily with respect to $v_\\pi(s)$, where\n",
+    "\n",
+    "$$\\pi'(s) = \\arg\\max_a q_\\pi(s, a)$$\n",
+    "\n",
+    "* If $\\pi' \\neq \\pi$, then $\\pi'$ is a strictly better policy (strict improvement).\n",
+    "* If $\\pi' = \\pi$, then the policy is already greedy with respect to its own value function, which indicates that the current policy is optimal and cannot be improved further.\n",
+    "\n",
+    "## Policy Iteration\n",
+    "Policy Iteration is an algorithmic process for finding the optimal policy by repeatedly alternating between policy evaluation and policy improvement. The key idea is that by evaluating the current policy and then improving it based on the evaluation, we can iteratively converge to an optimal or sufficiently good policy. In this process, each policy evaluation gives us more accurate value estimates, and each policy improvement ensures the new policy is strictly better or equally good. The process is guaranteed to converge to the optimal policy in finite MDPs.\n",
+    "\n",
+    "### Policy Iteration Algorithm\n",
+    "\n",
+    "1. Initialize:  \n",
+    "   * Start with an arbitrary policy $\\pi$\n",
+    "   * Initialize the state-value function $v$\n",
+    "\n",
+    "2. Policy Evaluation: \n",
+    "   * Compute $v_\\pi$ for the current policy using iterative updates until convergence.\n",
+    "\n",
+    "3. Policy Improvement:\n",
+    "   * For each state $s$, update the policy greedily with respect to $v_\\pi$:  \n",
+    "   $$\\pi_{\\text{new}}(s) = \\arg\\max_a \\sum_{s'} \\sum_r p(s', r \\mid s, a) \\left[ r + \\gamma v_\\pi(s') \\right]$$\n",
+    "\n",
+    "4. Check for Convergence:\n",
+    "   * If the policy hasn’t changed, the optimal policy has been found.\n",
+    "   * Otherwise, set $\\pi = \\pi_{\\text{new}}$ and return to Step 2.\n",
+    "\n",
+    "<img src=\"https://plusreinforcement.com/wp-content/uploads/2018/07/screen-shot-2018-07-04-at-7-37-40-pm.png\" width=350>"
    ]
   },
   {
