--- a/Reinforcement learning.ipynb
+++ b/Reinforcement learning.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc985d31",
+   "id": "e3312630",
    "metadata": {},
    "source": [
     "# Policy Evaluation & Improvement \n",
@@ -447,7 +447,46 @@
     "   * If the policy hasn’t changed, the optimal policy has been found.\n",
     "   * Otherwise, set $\\pi = \\pi_{\\text{new}}$ and return to Step 2.\n",
     "\n",
-    "<img src=\"https://plusreinforcement.com/wp-content/uploads/2018/07/screen-shot-2018-07-04-at-7-37-40-pm.png\" width=350>"
+    "<img src=\"https://plusreinforcement.com/wp-content/uploads/2018/07/screen-shot-2018-07-04-at-7-37-40-pm.png\" width=350>\n",
+    "\n",
+    "# Generalized Policy Iteration\n",
+    "Generalized Policy Iteration  refers to the framework in reinforcement learning where policy evaluation and policy improvement are interact repeatedly and approximately to gradually refine a policy toward optimality. The key idea is that evaluation and improvement do not need to fully complete before the next begins. As long as policy evaluation moves the value function closer to accurate estimates under the current policy, and policy improvement makes the policy greedier with respect to those estimates, the process will converge over time. If both the value function and the policy eventually stabilize, meaning no further updates occur, then the policy must be optimal, and the value function must be the optimal value function.\n",
+    "\n",
+    "\n",
+    "## Value Iteration\n",
+    "Value iteration is a form of generalized policy iteration that streamlines the process of finding the optimal policy. It addresses the inefficiency in traditional policy iteration, where the policy evaluation step requires multiple sweeps over all states until the value function converges. Instead of fully evaluating the current policy before improving it, value iteration performs a single update to each state's value in each iteration and greedy policy improvement. This reduces computational cost while still ensuring convergence to the optimal policy.\n",
+    "\n",
+    "The core update rule is:\n",
+    "$$v_{k+1}(s) = \\max_a \\sum_{s'} \\sum_r p(s', r \\mid s, a) \\left[ r + \\gamma v_k(s') \\right]$$\n",
+    "\n",
+    "Each update improves the value estimate of state $s$ by considering the best possible action to take, which is already a greedy selection. Once the value function has converged (changes are below a small threshold), the optimal policy can be derived by acting greedily with respect to the final value function\n",
+    "\n",
+    "$$\\pi_*(s) = \\arg\\max_a \\sum_{s'} \\sum_r p(s', r \\mid s, a) \\left[ r + \\gamma v_*(s') \\right]$$\n",
+    "\n",
+    "Value iteration has the advantage of\n",
+    "1. More efficient than policy iteration, especially in large state spaces.\n",
+    "2. Combines evaluation and improvement into a single update step.\n",
+    "3. Guaranteed to converge to the optimal value function and policy under standard conditions (finite MDP, $\\gamma < 1$ or episodic tasks).\n",
+    "\n",
+    "# DP Efficiency & Limitations\n",
+    "Dynamic programming methods, such as policy iteration and value iteration, are foundational tools in reinforcement learning for solving MDPs. These methods are guaranteed to converge to the optimal policy under the right conditions and are considered efficient in a theoretical sense.\n",
+    "\n",
+    "DP methods are polynomial time algorithms, meaning their computational complexity grows at a manageable rate with respect to the number of states and actions. This makes them efficient in contrast to brute force approaches that might try all possible policies.\n",
+    "\n",
+    "There are two types of DP methods, synchronous and asynchronous DP.\n",
+    "\n",
+    "* Synchronous DP: the value of all states is updated simultaneously and systematically in each iteration based on the values from the previous iteration. This is conceptually simple and easy to parallelize, but can be inefficient if many states are rarely visited or irrelevant in a given policy.\n",
+    "\n",
+    "* Asynchronous DP: only a subset of states is updated at a time. This allows for more targeted updates focusing on states that are frequently visited or have recently changed. Asynchronous methods can often reach good solutions more quickly in practice. However, to guarantee convergence to the correct value function, all states must still be updated sufficiently often over time. This means asynchronous DP does not necessarily reduce the total number of updates needed for convergence, but it allows for smarter scheduling and prioritization of updates. In practice, this leads to more efficient use of computational resources, especially when combined with techniques like prioritized sweeping.\n",
+    "\n",
+    "## Limitations of DP\n",
+    "However, \"efficiency\" of DP in a theoretical sense does not always translate to practicality in real world problems because of the following reasons\n",
+    "\n",
+    "1. Curse of Dimensionality: DP methods become intractable in high dimensional state spaces, where the number of possible states grows exponentially with the number of variables describing the state.\n",
+    "\n",
+    "2. Requirement of the Transition Probability: DP requires complete knowledge of the environment, specifically the transition probability function, $p(s', r \\mid s, a)$. In real world problems, this dynamic model is usually unknown, making pure DP methods inapplicable without approximation or learning.\n",
+    "\n",
+    "Dynamic Programming is a powerful baseline, but its real world applicability is often limited. That’s why modern reinforcement learning often turns to approximate dynamic programming, Monte Carlo methods, and temporal difference learning, which relax these constraints."
    ]
   },
   {
@@ -494,6 +533,23 @@
     "## Soft update\n",
     "When updating $Q = Q_{new}$, the new network may be worse than the old one. To prevent full overwritting, we update the weigths and bias through $w = p \\times w + (1-p) \\times w_{new}$ and $b = p \\times b + (1-p) \\times b_{new}$ instead of $w = w_{new}$  and $b = b_{new}$, where $b$ is a value between 0 and 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9635838b",
+   "metadata": {},
+   "source": [
+    "# Deep Reinforcement Learning\n",
+    "<img src=\"https://miro.medium.com/v2/resize:fit:2000/format:webp/0*P8RnG_xRY8sThfyp.png\" width=500>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "19a004bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
