RL: Added Monte Carlo

--- a/Reinforcement learning.ipynb
+++ b/Reinforcement learning.ipynb
@@ -371,7 +371,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3312630",
+   "id": "9872162c",
    "metadata": {},
    "source": [
     "# Policy Evaluation & Improvement \n",
@@ -491,6 +491,96 @@
   },
   {
    "cell_type": "markdown",
+   "id": "63369ea4",
+   "metadata": {},
+   "source": [
+    "# Sampling Based Learning Methods\n",
+    "In many real-world reinforcement learning scenarios, we do not have access to the full model of the environment, such as the transition probabilities or reward distributions. As a result, it becomes infeasible to apply planning methods like dynamic programming, which require full knowledge of the environment's dynamics.\n",
+    "\n",
+    "Sampling-based learning methods (model-free methods) address this by learning directly from sampled experiences, the actual sequences of states, actions, and rewards encountered by the agent while interacting with the environment. Instead of computing expectations over all possible next states as in DP, sampling based methods approximate value functions or policies using observed outcomes through experiences.\n",
+    "\n",
+    "Common examples of sampling-based methods include\n",
+    "* Monte Carlo methods: Learn from complete episodes by averaging returns.\n",
+    "* Temporal-Difference (TD) learning: Learn from bootstrapped estimates using partial episodes\n",
+    "\n",
+    "These methods are more scalable and practical in complex environments because they do not require storing or computing the full transition dynamics. However, they also come with trade-offs, such as increased variance in learning and the need for sufficient exploration to obtain a good enough estimate. In summary, sampling-based learning allows an agent to learn optimal behavior from trial-and-error experience, without needing a complete model of the environment\n",
+    "\n",
+    "## Monte Carlo Method\n",
+    "Monte Carlo methods estimate value functions by averaging returns obtained from multiple sampled episodes. These methods rely solely on sequences of states, actions, and rewards generated through actual interactions with the environment. Unlike DP, Monte Carlo methods do not require knowledge of the environment’s dynamics.\n",
+    "\n",
+    "Similar to DP, Monte Carlo methods follow the principle of Generalized Policy Iteration, where they alternate between policy evaluation (estimating how good the current policy is) and policy improvement (using the value estimates to make the policy better), eventually converging to an optimal or good enough policy.\n",
+    "\n",
+    "### Monte Carlo for Policy Evaluation\n",
+    "To evaluate a policy using the Monte Carlo approach\n",
+    "1. Given a policy, run simulations based on it to generate many episodes.\n",
+    "2. Record the returns (cumulative discounted rewards) observed following each state.\n",
+    "3. Estimate the value of a state as the average return observed when visiting that state across many episodes.\n",
+    "\n",
+    "Given that episodes terminate, the return $G_t$ at each time step $t$ can be computed backward from the end of the episode, where\n",
+    "$$G_t = r_{t+1} + \\gamma r_{t+2} + \\gamma^2 r_{t+3} + \\dots + \\gamma^{T-t-1} r_T$$\n",
+    "\n",
+    "With enough samples, the average return for each state converges to the true expected return under the given policy.\n",
+    "\n",
+    "### Monte Carlo vs DP\n",
+    "1. No Need for a Model: Monte Carlo methods do not require access to the environment's transition or reward model. They learn directly from sampled episodes, unlike DP which requires complete knowledge of the dynamics.\n",
+    "\n",
+    "2. Independent State Updates: In Monte Carlo, the value of each state is computed independently by averaging returns from that specific state. In contrast, DP relies on bootstrapping, where the value of a state is a weighted sum of the values of successor states. This means\n",
+    "   * Monte Carlo computation scales with the number of episodes (and their length), not the size of the state space (the size of MDP).\n",
+    "   * DP computation scales with the number of states and the transition model complexity.\n",
+    "   \n",
+    "### Monte Carlo for Action-Value Estimation\n",
+    "In DP, state values are sufficient to determine a policy because the model (transition probabilities and rewards) allows us to look one step ahead and select the action that leads to the best expected outcome. However, in Monte Carlo methods, where no model of the environment is available, state values alone are insufficient for decision makin because even though we know the all the state values, we do not know the transition probabilities, and thus, do not know which state the agent will end up in after taking an action. Therefore, we must explicitly estimate action-value functions, $q_\\pi(s, a)$, to determine which actions are better under a given policy.\n",
+    "\n",
+    "To estimate action values\n",
+    "1. Generate episodes using the current policy.\n",
+    "2. For each state–action pair, we record the return following that pair.\n",
+    "3. The estimated action value $q_\\pi(s, a)$ is the average of these observed returns.\n",
+    "\n",
+    "This is similar to estimating state values, except we condition on both the state and the action taken.\n",
+    "\n",
+    "### Exploring Starts\n",
+    "However, this methods has an critical issue when the agent follows a deterministic policy, and certain state–action pairs may never be visited. As a result, some action values will never be updated, and the agent cannot learn about better actions it never tries. This violates the principle of sufficient exploration, making it impossible to guarantee convergence to the optimal policy.\n",
+    "\n",
+    "One common solution in Monte Carlo control is exploring starts, where each episode begins from a randomly chosen state–action pair and follow the policy for the remainder of the episode. This ensures that all state–action pairs have a non-zero probability of being explored. With enough episodes, this guarantees that all $q_\\pi(s, a)$ values are visited and accurately estimated.\n",
+    "\n",
+    "### Monte Carlo Method for Policy Iteration\n",
+    "Monte Carlo methods can be used to perform policy iteration. This is achieved through sampling episodes and estimating the action values from experience. The algorithm proceeds as follows\n",
+    "\n",
+    "1. Initialization\n",
+    "* Initialize an arbitrary policy $\\pi$.\n",
+    "* Initialize the action-value function $q_\\pi(s, a)$ arbitrarily (e.g., to zero for all $(s, a)$ pairs).\n",
+    "\n",
+    "2. Generate an Episode\n",
+    "* Use exploring starts to ensure sufficient coverage of all state-action pairs.\n",
+    "* Generate an episode by starting from a random state-action pair, then follow the current policy $\\pi$.\n",
+    "* Record the sequence of $(s_t, a_t, r_{t+1})$ for the entire episode until termination.\n",
+    "\n",
+    "\n",
+    "3. Monte Carlo Policy Evaluation\n",
+    "* For each state-action pair $(s, a)$ that appears in the episode:\n",
+    "  a. Compute the return $G_t$ backward with discount.\n",
+    "  b. Update the action-value estimate $q_\\pi(s, a)$ as the sample average of all returns observed for that pair:\n",
+    "    $$q_\\pi(s, a) \\leftarrow \\text{average of all returns observed after visiting } (s, a)$$\n",
+    "\n",
+    "Note: Only the $(s, a)$ pairs actually visited in the episode are updated; others remain unchanged. In theory, an infinite number of episodes ensures accurate value estimation for all pairs. In practice, however, we use limited episodes, meaning early updates may be noisy—but over many iterations, the estimates improve.\n",
+    "\n",
+    "4. Policy Improvement\n",
+    "* For each state $s$ visited in the episode, improve the policy by choosing the action with the highest estimated value to make the policy greedy with respect to the current $q_\\pi$, where\n",
+    "  $$\\pi_{\\text{new}}(s) = \\arg\\max_a q_\\pi(s, a)$$\n",
+    "\n",
+    "5. Repeat\n",
+    "* Return to Step 2 and continue until the policy converges, or for a fixed number of iterations.\n",
+    "\n",
+    "Note: Using one or few episode per iteration is analogous to stochastic gradient descent, where each update may be noisy, but the overall trend improves the policy over time. The use of exploring starts ensures that all state-action pairs have a non-zero chance of being updated, which is critical for convergence guarantees.\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "<img src=\"https://i0.wp.com/roboticseabass.com/wp-content/uploads/2020/08/rl_intro_banner-1.png?fit=1200,448&ssl=1\">"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "9f6e2f0f",
    "metadata": {},
    "source": [
@@ -536,7 +626,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9635838b",
+   "id": "92d1afc4",
    "metadata": {},
    "source": [
     "# Deep Reinforcement Learning\n",
@@ -546,7 +636,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "19a004bd",
+   "id": "5c184892",
    "metadata": {},
    "outputs": [],
    "source": []
