RL: Added Importance sampling

--- a/notebooks/Reinforcement learning.ipynb
+++ b/notebooks/Reinforcement learning.ipynb
@@ -527,7 +527,9 @@
     "2. Independent State Updates: In Monte Carlo, the value of each state is computed independently by averaging returns from that specific state. In contrast, DP relies on bootstrapping, where the value of a state is a weighted sum of the values of successor states. This means\n",
     "   * Monte Carlo computation scales with the number of episodes (and their length), not the size of the state space (the size of MDP).\n",
     "   * DP computation scales with the number of states and the transition model complexity.\n",
-    "   \n",
+    "\n",
+    "<img src=\"https://i0.wp.com/roboticseabass.com/wp-content/uploads/2020/08/rl_intro_banner-1.png?fit=1200,448&ssl=1\" width=700>\n",
+    "\n",
     "### Monte Carlo for Action-Value Estimation\n",
     "In DP, state values are sufficient to determine a policy because the model (transition probabilities and rewards) allows us to look one step ahead and select the action that leads to the best expected outcome. However, in Monte Carlo methods, where no model of the environment is available, state values alone are insufficient for decision makin because even though we know the all the state values, we do not know the transition probabilities, and thus, do not know which state the agent will end up in after taking an action. Therefore, we must explicitly estimate action-value functions, $q_\\pi(s, a)$, to determine which actions are better under a given policy.\n",
     "\n",
@@ -558,11 +560,11 @@
     "\n",
     "3. Monte Carlo Policy Evaluation\n",
     "* For each state-action pair $(s, a)$ that appears in the episode:\n",
-    "  a. Compute the return $G_t$ backward with discount.\n",
-    "  b. Update the action-value estimate $q_\\pi(s, a)$ as the sample average of all returns observed for that pair:\n",
+    "     - Compute the return $G_t$ backward with discount.\n",
+    "     - Update the action-value estimate $q_\\pi(s, a)$ as the sample average of all returns observed for that pair:\n",
     "    $$q_\\pi(s, a) \\leftarrow \\text{average of all returns observed after visiting } (s, a)$$\n",
     "\n",
-    "Note: Only the $(s, a)$ pairs actually visited in the episode are updated; others remain unchanged. In theory, an infinite number of episodes ensures accurate value estimation for all pairs. In practice, however, we use limited episodes, meaning early updates may be noisy—but over many iterations, the estimates improve.\n",
+    "Note: Only the $(s, a)$ pairs actually visited in the episode are updated; others remain unchanged. In theory, an infinite number of episodes ensures accurate value estimation for all pairs. In practice, however, we use limited episodes, meaning early updates may be noisy, but over many iterations, the estimates improve.\n",
     "\n",
     "4. Policy Improvement\n",
     "* For each state $s$ visited in the episode, improve the policy by choosing the action with the highest estimated value to make the policy greedy with respect to the current $q_\\pi$, where\n",
@@ -573,10 +575,149 @@
     "\n",
     "Note: Using one or few episode per iteration is analogous to stochastic gradient descent, where each update may be noisy, but the overall trend improves the policy over time. The use of exploring starts ensures that all state-action pairs have a non-zero chance of being updated, which is critical for convergence guarantees.\n",
     "\n",
+    "### Monte Carlo for Action-Value Without Exploring Start\n",
+    "Exploring start requires that the agent will be initialized at all possible state-action pairs in order to give enough exploration. This can be problematic in complex, real world problem as some problems, like self-driving car, can have infinite amount of state-action pairs.\n",
     "\n",
+    "To solve this, we can use $\\epsilon$-soft policy. $\\epsilon$-soft policy is a stochastic policy that give each possible actions at least $\\frac{\\epsilon}{\\text{Total number of actions}}$ probability of being selected, where\n",
+    "$$\\pi(a|s) \\geq \\frac{\\epsilon}{A(s)}$$\n",
     "\n",
+    "For example, $\\epsilon$ greedy and uniform random policies are both examples of $\\epsilon$-soft policy.\n",
     "\n",
-    "<img src=\"https://i0.wp.com/roboticseabass.com/wp-content/uploads/2020/08/rl_intro_banner-1.png?fit=1200,448&ssl=1\">"
+    "The stochasticity in $\\epsilon$-soft policy mean that the agent will explore automatically, meaning they will eventually visit all state-action pairs with large enough episodes. This means we can remove the exploring start condition.\n",
+    "\n",
+    "However, $\\epsilon$-soft policy also means it can only learn the optimal soft policy through policy iteration, and it can never perform as well as the optimal deterministic policy as there's always a small chance of the agent to explore even when it knows the environment completely. Nontheless, this optimal soft policy often performs well enough, and there is no need to find the optimal deterministic policy\n",
+    "\n",
+    "To achieve policy iteration for $\\epsilon$-soft policies, we first initalize a random $\\epsilon$-soft policy. Then, we run simulations to obtain an episode, and we use the observed return at each state to update the action-value estimates. Finally, we make the policy $\\epsilon$ greedy with respect to the currently action-value function. This process is essentially the same as before, but instead of using a determinstic policy, all the policies involved are stochastic, and instead of arrving at the optimal dterministic policy, we will arrive at the optimal $\\epsilon$-soft policy\n",
+    "\n",
+    "### Monte Carlo for Action-Value Without Exploring Starts\n",
+    "In Monte Carlo control with exploring starts, every state-action pair must have a non-zero probability of being the initial pair in an episode. This guarantees that all $(s, a)$ pairs are eventually visited, which is critical for ensuring convergence to the optimal policy. However, exploring starts are impractical in real world problems, especially those with continuous or infinite state-action spaces, like self-driving cars, where it’s impossible to initialize the agent in every possible situation.\n",
+    "\n",
+    "### $\\boldsymbol{\\varepsilon}$-Soft Policies\n",
+    "To ensure sufficient exploration without exploring starts, we use $\\varepsilon$-soft policies, which are stochastic policies that assign non-zero probability to all actions in every state, where\n",
+    "\n",
+    "$$\\pi(a \\mid s) \\geq \\frac{\\varepsilon}{|\\mathcal{A}(s)|}$$\n",
+    "\n",
+    "This guarantees that every action in every state has a chance of being selected with at least probability of $\\frac{\\varepsilon}{\\text{Number of possible actions}}$. Thus, all state-action pairs are eventually explored with enough episodes. Both $\\varepsilon$-greedy policy and uniform random policy are examples of $\\varepsilon$-soft policies\n",
+    "\n",
+    "Using an $\\varepsilon$-soft policy ensures exploration and removes the need for exploring starts. However, there’s a trade-off, where the agent can only converge to the optimal $\\varepsilon$-soft policy, not the optimal deterministic policy. Even after learning a near-optimal policy, the agent still occasionally explores due to the non-zero $\\varepsilon$.\n",
+    "\n",
+    "In practice, the performance of the optimal $\\varepsilon$-soft policy is often close to that of the optimal deterministic policy, and perform well enough for the need.\n",
+    "\n",
+    "### Monte Carlo Control with $\\varepsilon$-Soft Policy (Policy Iteration)\n",
+    "The process is similar to standard Monte Carlo policy iteration, with the key difference being the use of stochastic policies:\n",
+    "\n",
+    "1. Initialize:\n",
+    "   - Initialize a random $\\varepsilon$-soft policy $\\pi$.\n",
+    "   - Initialize action-value estimates $q(s, a)$ arbitrarily.\n",
+    "\n",
+    "2. Generate Episode:\n",
+    "   - Generate an episode following the current $\\varepsilon$-soft policy.\n",
+    "   - Record the sequence of $(s_t, a_t, r_{t+1})$.\n",
+    "\n",
+    "3. Policy Evaluation:\n",
+    "   - For each state-action pair in the episode:\n",
+    "     - Compute return $G_t$ and update $q(s, a)$ as the sample average.\n",
+    "\n",
+    "4. Policy Improvement:\n",
+    "   - For each state $s$ visited:\n",
+    "     - Make the policy $\\varepsilon$-greedy with respect to the current $q(s, a)$:\n",
+    "       $$\n",
+    "       \\pi(a \\mid s) =\n",
+    "       \\begin{cases}\n",
+    "       1 - \\varepsilon + \\frac{\\varepsilon}{|\\mathcal{A}(s)|}, & \\text{if } a = \\arg\\max_a q(s, a) \\\\\n",
+    "       \\frac{\\varepsilon}{|\\mathcal{A}(s)|}, & \\text{otherwise}\n",
+    "       \\end{cases}\n",
+    "       $$\n",
+    "\n",
+    "5. Repeat steps 2–4 until convergence.\n",
+    "\n",
+    "Overall, $\\varepsilon$-soft policy solves the problem of insufficient exploration with a large number of possible state-action pairs, and is able to achieve a good enough, sub-optimal stochastic policy."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "641a2dfc",
+   "metadata": {},
+   "source": [
+    "# On-Policy vs Off-Policy Learning\n",
+    "In reinforcement learning, there are two fundamental paradigms for learning from interaction, on-policy and off-policy learning. The key difference lies in whether the policy being learned is the same as the policy used to generate the data.\n",
+    "\n",
+    "## On-Policy Learning\n",
+    "In on-policy learning, the agent learns about and improves the same policy that it uses to make decisions. This means the data used for learning is generated by following the current policy, which typically includes a balance of exploitation and exploration. \n",
+    "\n",
+    "**Pros:**\n",
+    "1. Conceptually simpler.\n",
+    "2. Lower variance in value estimates since learning is based on the actual policy being executed.\n",
+    "\n",
+    "**Cons:**\n",
+    "1. Exploration is constrained by the policy itself.\n",
+    "2. May learn slower due to limited exploration.\n",
+    "\n",
+    "## Off-Policy Learning\n",
+    "In off-policy learning, the agent learns about a different policy than the one used to generate the data. There are two distinct policies involved:\n",
+    "\n",
+    "1. Target policy: the policy the agent is trying to learn or evaluate, denoted by $\\pi(a \\mid s)$\n",
+    "2. Behaviour policy: the policy used to generate data (select actions), denoted by $b(a \\mid s)$\n",
+    "\n",
+    "This allows the agent to learn an optimal or deterministic target policy while still exploring using a stochastic behavior policy.\n",
+    "\n",
+    "**Pros:**\n",
+    "1. More general and powerful; can learn from data generated by other agents or past experiences.\n",
+    "2. Enables stronger exploration while still converging to an optimal deterministic policy.\n",
+    "\n",
+    "**Cons:**\n",
+    "1. Higher variance in updates, especially when using importance sampling.\n",
+    "2. Requires careful alignment between behavior and target policies.\n",
+    "\n",
+    "For off-policy learning to be valid, the behavior policy must cover all the actions that the target policy might take. That is:\n",
+    "$$\\text{If } \\pi(a \\mid s) > 0, \\text{ then } b(a \\mid s) > 0$$\n",
+    "\n",
+    "This ensures that the agent gets enough data to estimate the value of the target policy correctly. If the behavior policy never explores certain actions that the target policy might select, it is impossible to evaluate or improve the target policy accurately.\n",
+    "\n",
+    "## Importance Sampling\n",
+    "Importance sampling is a fundamental technique used in off-policy reinforcement learning. It allows us to estimate expectations under one probability distribution (the target policy) using samples drawn from a different distribution (the behavior policy). This is crucial in off-policy learning, where the agent aims to learn or evaluate a policy that is different from the one used to generate data.\n",
+    "\n",
+    "In off-policy learning, we want to compute the expected return or value function under the target policy $\\pi$, but the agent collects data using the behavior policy $b$, which is, generally, a more exploratory policy. Since the distrubtion of the target and behaviour policies are different, we need a way to \"correct\" for the difference in distributions, which is importance sampling.\n",
+    "\n",
+    "### The Mathematics\n",
+    "Suppose we want to estimate the expected value of some function $f(x)$ under a target distribution $p(x)$, but we only have samples from a different distribution $q(x)$. Then:\n",
+    "\n",
+    "$$\n",
+    "\\mathbb{E}_{x \\sim p}[f(x)] = \\sum_x p(x) f(x) = \\sum_x \\frac{p(x)}{q(x)} q(x) f(x) = \\mathbb{E}_{x \\sim q}\\left[\\frac{p(x)}{q(x)} f(x)\\right]\n",
+    "$$\n",
+    "\n",
+    "Here, $\\frac{p(x)}{q(x)}$ is the importance sampling ratio, which reweights the samples to reflect their importance under the target distribution. The importance sampling ratio reflects the ratio between the two distributions, which allows us to estimate expectations under one distribution using samples from another by accounting for the difference in likelihood between the two.\n",
+    "\n",
+    "### Importance Sampling in Reinforcement Learning\n",
+    "In the context of RL, the goal is to estimate the expected return under a target policy $\\pi$, but the data (state-action-reward trajectories) was generated by a different behavior policy $b$. Even if the actions taken differ, both the target policy $\\pi$ and the behavior policy $b$ interact with the same environment. This means the state transition dynamics are the same for both, since they are governed by the MDP and do not depend on the policy itself. As a result, the only difference between trajectories generated by $b$ and those from $\\pi$ lies in how actions are selected at each state, which is the difference in the distributions of the policies. By accounting for this difference with importance sampling, we can accurately estimate the expected return of the target policy $\\pi$ using samples generated by the behavior policy $b$.\n",
+    "\n",
+    "* Let $\\pi(a_t \\mid s_t)$ be the probability of taking action $a_t$ in state $s_t$ under the target policy $\\pi$.\n",
+    "* Let $b(a_t \\mid s_t)$ be the probability of taking the same action under the behavior policy $b$.\n",
+    "\n",
+    "At time step $t$, the importance sampling ratio is\n",
+    "$$\\rho_t = \\frac{\\pi(a_t \\mid s_t)}{b(a_t \\mid s_t)}$$\n",
+    "\n",
+    "This ratio tells us how to reweight a sample from the behavior policy $b$ to estimate its expected contribution under the target policy $\\pi$. In other words, it represents the ratio of the likelihood of taking the same action $a$ in the same state $s$ between the two policies.\n",
+    "\n",
+    "* If $\\rho_t$ is small, it means this action was much more likely under $b$ than under $\\pi$, so this sample is less relevant to what $\\pi$ would do. We downweight it.\n",
+    "* If $\\rho_t$ is large, it means this action is more consistent with what $\\pi$ would have done. We upweight it.\n",
+    "\n",
+    "Essentially, $\\rho_t$ tells us how much a sample from $b$ should count when estimating what $\\pi$ would do. It adjusts for the differences of the distributions between the two policies, so that we can use data from one policy to estimate the behavior of another.\n",
+    "\n",
+    "To estimate the return under the target policy $\\pi$ over a full trajectory of length $T$, we compute the cumulative importance sampling ratio from time $t$ onward, where\n",
+    "\n",
+    "$$\\rho_{t:T-1} = \\prod_{k=t}^{T-1} \\frac{\\pi(a_k \\mid s_k)}{b(a_k \\mid s_k)} = \\rho_t \\cdot \\rho_{t+1} \\cdots \\rho_{T-1}$$\n",
+    "\n",
+    "This cumulative ratio adjusts for the differences between the target policy $\\pi$ and the behavior policy $b$ at each timestep along the trajectory. It effectively reweights the entire trajectory so that it reflects how likely the actions would be under the target policy. Then, given a trajectory generated by $b$, we can estimate the expected return under the target policy $\\pi$ using:\n",
+    "\n",
+    "$$v_\\pi(s_t) = \\mathbb{E}_b[\\rho_{t:T-1} \\cdot G_t \\mid s_t] \\approx \\frac{1}{N} \\sum_{i=1}^N \\rho^{(i)} G^{(i)}$$\n",
+    "\n",
+    "* $G_t$: the observed return from time $t$ onward based on the behavior policy $b$, where $G_t = r_{t+1} + \\gamma r_{t+2} + \\gamma^2 r_{t+3} + \\dots$\n",
+    "* $\\rho_{t:T-1}$: the cumulative importance sampling ratio\n",
+    "* $\\rho^{(i)} G^{(i)}$: one reweighted return from the $i$-th trajectory.\n",
+    "* $N$: the total number of trajectories sampled from the behavior policy $b$.\n",
+    "\n",
+    "So if we have multiple trajectories, we compute the adjusted return for each using $\\rho^{(i)} G^{(i)}$, and then average them to estimate the expected return under the target policy.\n"
    ]
   },
   {
@@ -644,9 +785,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "tf",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "tf"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -658,7 +799,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.15"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
